kxsurvey styles, fix live chat overlap

--- a/src/scss/components/common/_kxSurvey.scss
+++ b/src/scss/components/common/_kxSurvey.scss
@@ -8,28 +8,42 @@ $close-button-size: 2.5rem;
 .kxSurvey {}
 
 
+@at-root {
+  body[kxsurvey-open] {
+    @media screen and (max-width: $mobile) {
+      #gis-cta-container {
+        transition: 0.75s;
+        bottom: 190px;
+      }
+    }
+  }
+}
+
 // prompt
 .kxSurvey__prompt {
   z-index: 1000; // 2100 gnb z-index
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: 1rem;
-  background: black;
+  bottom: 1rem;
+  right: 1rem;
+  left: 1rem;
+  // margin: 1rem;
+  background: #f4f4f4;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   max-width: 380px;
+  width: auto;
   padding: 1.5rem;
   text-align: center;
   opacity: 0;
   animation: prompt-enter 0.75s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
-
+  font-size: 0.9rem;
   @media screen and (min-width: $mobile + 1) {
+    width: 100%;
+    bottom: 2rem;
+    right: 2rem;
     left: auto;
-    margin: 2rem;
   }
 
   &[active] {
@@ -40,9 +54,11 @@ $close-button-size: 2.5rem;
   h4 {
     margin-bottom: 0.5rem;
     line-height: 1.2;
+    color: black;
   }
   p {
     margin-bottom: 1rem;
+    color: black;
   }
 }
 
@@ -50,7 +66,11 @@ $close-button-size: 2.5rem;
   display: flex;
   justify-content: space-between;
   width: 100%;
-
+  .btn {
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 1rem;
+  }
   .btn:first-child {
     margin-right: 1rem;
   }
